Data working correctly and modals for the trailer visualization work, needs correcting on the poster hover, so that it darkens and fonts can be visible

--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,21 @@ body {
   display: block;
 }
 
-.title {
- height: 9.37rem;
+.title{
+ height: 9rem;
+}
+
+.footer_content{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  width: 100%;
+  background-color: rgba(237, 29, 36, 0.411);
+  height: 2rem;
+  text-align: center;
+  z-index: 1;
 }
 
 .head{
@@ -97,6 +110,7 @@ h3 {
 
 .movies:hover .movieText{
   visibility: visible;
+  cursor:pointer;
 }
 
 .movieText {
@@ -126,4 +140,182 @@ h3 {
 .movieYear {
   font-size: 1.2rem;
   color: white;
+}
+
+.container{
+    display: block;
+    justify-content: right;
+    height: 100%;
+}
+
+.img_content, .irc_mi{
+    display: block;
+    max-width: 100%;
+    margin: auto;
+    height: auto;
+    width: 25rem;
+    margin-top: 4rem;
+}
+.button{
+  background: red;
+  width: 15rem;
+  -webkit-border-radius: 1.75rem;
+  -moz-border-radius: 1.75rem;
+  border-radius: 1.75rem;
+  text-shadow: 0.18rem 0.10rem 0.18rem #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff;
+  font-size: 1.5rem;
+  padding: 1.15rem ;
+  text-decoration: none;
+  background-image: -webkit-linear-gradient(top, red, #720404);
+  background-image: -moz-linear-gradient(top,  red, #720404);
+  background-image: -ms-linear-gradient(top,  red, #720404);
+  background-image: -o-linear-gradient(top,  red, #720404);
+  background-image: linear-gradient(to bottom,  red, #720404);
+  margin: 2rem;
+  align-items: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.button:hover{
+  background: #022236;
+  background-image: -webkit-linear-gradient(top, #022236, #3a7bf5);
+  background-image: -moz-linear-gradient(top, #022236, #3a7bf5);
+  background-image: -ms-linear-gradient(top, #022236, #3a7bf5);
+  background-image: -o-linear-gradient(top, #022236, #3a7bf5);
+  background-image: linear-gradient(to bottom, #022236, #3a7bf5);
+  text-decoration: none;
+}
+
+.divider{
+  width:15rem;
+  height:auto;
+  display:inline-block;
+}
+
+.button-yes{
+  text-align: center;
+}
+
+.quest{
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.background_marvel{
+  float:right;
+  max-width: 50%;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: -2;
+}
+
+.irc_mi{
+  max-width: 28rem;
+  height: 15rem;
+}
+.info_content{
+  color: white;
+  font-size: 1.2rem;
+  text-align: justify;
+  margin: 2rem;
+}
+
+ /*-----Main------*/
+ p,
+ span {
+  font-size: 1.2em;
+ }
+
+.video_content{
+ display: block;
+ height: 100%;
+ width: 100%;
+ text-decoration: none;
+}
+
+.modal_container{
+  background-color: rgba(0,0,0,.8);
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  opacity:0;
+  pointer-events:none;
+  transition: all 1s;
+}
+
+.container_video{
+  background-color:black;
+  width:750px;
+  padding: 0.70rem 1.25rem;
+  margin: 10% auto;
+  position: relative;
+  display: block;
+  border-width: 15px;
+  border-color: whitesmoke;
+}
+
+#modal_video:target{
+  opacity:1;
+  pointer-events:auto;
+}
+
+.color_button{
+  color: white;
+}
+
+.history{
+  display: none;
+  padding: 2rem;
+}
+
+.modal{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  overflow: hidden;
+  outline: 0;
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 10px;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fff;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 1px solid #999;
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: 6px;
+  outline: 0;
+  -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+
+.scale-media{
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
+.scale-media iframe {
+   border: none;
+   height: 100%;
+   position: absolute;
+   width: 100%;
+   left: 0;
+   top: 0;
+   background-color: white;
 }
